--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.15.5",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.21",
+    "prettier": "^2.8.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   }
