chore: add pre-push hook

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-  "*.ts": ["npx eslint 'src/**' --fix", "npx prettier --check 'src/**'"]
+  "*.ts": ["eslint --fix 'src/**' --fix", "prettier --write 'src/**'", "npm run test:staged"]
 }
