--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/server.ts",
-    "husky:prepare": "husky install"
+    "husky:prepare": "husky install",
+    "test": "jest --passWithNoTests",
+    "test:watch":"jest --passWithNoTests --watch",
+    "test:staged": "npx test --findRelatedTestes",
+    "test:push": "npx test --coverage"
+    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.5",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "eslint": "^8.36.0",
@@ -20,10 +26,15 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "lint-staged": "^13.2.0",
     "nodemon": "^2.0.21",
     "prettier": "^2.8.6",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
+  },
+  "lint-staged": {
+    "src/*.{ts,tsx}": ["eslint . --fix", "prettier --write ."]
   }
 }
