chore: add tsc-alias to build script and tsconfig-paths to start script

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,7 @@
 {
-  "*.ts": ["eslint --fix 'src/**' --fix", "prettier --write 'src/**'", "npm run test:staged"]
+  "*.ts": [
+    "eslint 'src/**' --fix",
+    "prettier --check --write 'src/**'",
+    "npm run test"
+  ]
 }
