--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "typescript-api-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "start:build": "node dist/server.js",
-    "start": "nodemon src/server.ts",
+    "start": "nodemon --watch 'src/' --exec ts-node-esm -r tsconfig-paths/register src/index.ts -e ts",
     "husky:prepare": "husky install",
     "test": "jest --passWithNoTests",
-    "test:watch":"jest --passWithNoTests --watch",
-    "test:staged": "npx test --findRelatedTestes",
-    "test:push": "npx test --coverage"
-    
+    "test:watch": "jest --passWithNoTests --watch",
+    "test:staged": "jest --passWithNoTests --findRelatedTests",
+    "test:push": "jest --passWithNoTests --coverage"
   },
   "keywords": [],
   "author": "",
@@ -34,9 +33,14 @@
     "prettier": "^2.8.6",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.4",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^5.0.2"
   },
   "lint-staged": {
-    "src/*.{ts,tsx}": ["eslint . --fix", "prettier --write ."]
+    "src/*.{ts,tsx}": [
+      "eslint . --fix",
+      "prettier --write ."
+    ]
   }
 }
