--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start:build": "node dist/server.js",
     "start": "nodemon --watch 'src/' --exec ts-node-esm -r tsconfig-paths/register src/index.ts -e ts",
     "husky:prepare": "husky install",
-    "test": "jest --passWithNoTests",
+    "test": "jest --passWithNoTests --silent --runInBand",
     "test:watch": "jest --passWithNoTests --watch",
-    "test:staged": "jest --passWithNoTests --findRelatedTests",
+    "test:staged": "npm test -- --findRelatedTests",
     "test:push": "jest --passWithNoTests --coverage"
   },
   "keywords": [],
