--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc && tsc-alias",
     "start:build": "node dist/server.js",
-    "start": "nodemon --watch 'src/' --exec ts-node-esm -r tsconfig-paths/register src/index.ts -e ts",
+    "start": "nodemon --watch 'src/' --exec ts-node-esm -r tsconfig-paths/register src/server.ts -e ts",
     "husky:prepare": "husky install",
     "test": "jest --passWithNoTests --silent --runInBand",
     "test:watch": "jest --passWithNoTests --watch",
