feat: add MongoClient with mongodb connection

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3450
 
-MONGODB_URL=cluster0.o1gbdkr.mongodb.net
+MONGODB_URL=mongodb+srv://cluster0.o1gbdkr.mongodb.net
 MONGODB_USERNAME=root
-MONGODB_PASSWORD=123
+MONGODB_PASSWORD=senha051199
