--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-misused-promises": "off",
         "@typescript-eslint/consistent-type-imports": "off",
-        "@typescript-eslint/no-floating-promises": "off"
+        "@typescript-eslint/no-floating-promises": "off",
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/strict-boolean-expressions": "off"
     }
 }
